cluster/ingress/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userfastapi-ingress
  namespace: userfastapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1024M"
spec:
  rules:
    - host: "local.userfastapi.com.br"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userfastapi-server
                port:
                  number: 8000
